# ols-py

./: .cruft.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENCE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: dependencies.yml  draft_release.yml  test.yml  type_check.yml
changelog/: index.html
client/: index.html
docs/: api_docs.md  client.md  schemas.md
schemas/: index.html
search/: search_index.json
src/ols_py/: __init__.py  client.py  instances.py  ols4_client.py  schema.py  schemas.py
src/ols_py/ols4_schemas/: __init__.py  responses.py
src/ols_py/schemas/: __init__.py  common.py  requests.py  responses.py
tests/: conftest.py  test_client.py  test_ols4_client.py  test_schemas.py
